--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <div class="skills__box">
                         <ul>
                             <li class="skills__img"><img src="Imagenes/react.svg" class="react"></li>
-                            <li class="react__text">React</li>
+                            <li class="skills__name">React</li>
                         </ul>
                     </div>
                     <div class="skills__box">
