--- a/index.html
+++ b/index.html
@@ -117,15 +117,15 @@
                     <div class="academic__courses__box">
                         <ul class="academic__courses__list">
                             <li class="academic__courses__item__img"><img src="Imagenes/industrial-robot-factory-svgrepo-com.svg"></li>
-                            <li class="academic__courses__item__title">Ingeniería Mecatrónica</li>
-                            <li class="academic__courses__item__subtitle"><p>2017 - Universidad Tecnológica</p></li>
+                            <li class="academic__courses__item__title">Ingeniería Mecatrónica</br>2017 - Universidad Tecnológica</li>
+                            
                         </ul>
                     </div>
                     <div class="academic__courses__box">
                         <ul class="academic__courses__list">
                             <li class="academic__courses__item__img"><img src="Imagenes/alura_logo.png"></li>
-                            <li class="academic__courses__item__title">Oracle next education</li>
-                            <li class="academic__courses__item__subtitle"><p> En curso </p></li>
+                            <li class="academic__courses__item__title">Oracle next education</br>En curso</li>
+                            
                         </ul>
                     </div>
                 </div>
