--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <img src="Imagenes/vector.png">
                     <h3 class="menu__title">Marco Antonio Chávez</h3>
                 </header>
-                <nav>
+                <nav class="nav">
                     <ul class="menu__list">
                     <li class="menu__list__item"><a href="#sobre-mi">Sobre mi</a></li>
                     <li class="menu__list__item"><a href="#skills">Skills</a></li>
